Fix z-index issue

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -24,7 +24,7 @@
   top: 0;
   bottom: 0;
   background: #fff;
-  z-index: 1001;
+  z-index: 998;
 }
 
 .loading::after {
@@ -40,7 +40,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   animation: loading-animation 1s linear infinite;
-  z-index: 1002;
+  z-index: 999;
 }
 
 @keyframes loading-animation {
